--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,15 @@
 
     R package: codeinfo
     
+CHANGES IN VERSION 0.1.2
+    
+    2019/04/17  GIT_REVISION renamed REVISION (internal change)
+    
+        Minimum R version required decreased to R 3.1.0
+        to make it possible to install the package on 
+        old R version. The package was nonetheless not 
+        tested for that version.
+    
 CHANGES IN VERSION 0.1.1
     
     2019/01/10  Added .onAttach() to the package
